code optimized and added new utils